@@ -245,6 +245,7 @@ t/153_save_hocr_as_text.t
 t/154_save_hocr.t
 t/155_save_text_as_hocr.t
 t/156_save_hocr_with_encoding.t
+t/157_save_hocr_multipage.t
 t/1601_import_DjVu.t
 t/1602_import_DjVu_with_error.t
 t/1603_import_DjVu_with_error2.t
