@@ -1,0 +1,93 @@
+use warnings;
+use strict;
+use Test::More tests => 1;
+
+BEGIN {
+    use Gscan2pdf::Document;
+    use Gtk2 -init;    # Could just call init separately
+}
+
+#########################
+
+use Log::Log4perl qw(:easy);
+Log::Log4perl->easy_init($WARN);
+my $logger = Log::Log4perl::get_logger;
+Gscan2pdf::Document->setup($logger);
+
+# Create test image
+system('convert rose: test.pnm');
+
+my $slist = Gscan2pdf::Document->new;
+
+# dir for temporary files
+my $dir = File::Temp->newdir;
+$slist->set_dir($dir);
+
+my $hocr = <<'EOS';
+                  '<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title></title>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+<meta name='ocr-system' content='tesseract'>
+</head>
+<body>
+<div class='ocr_page' id='page_1' title='image "test.tif"; bbox 0 0 422 61'>
+<div class='ocr_carea' id='block_1_1' title="bbox 1 14 420 59">
+<p class='ocr_par'>
+<span class='ocr_line' id='line_1_1' title="bbox 1 14 420 59"><span class='ocr_word' id='word_1_1' title="bbox 1 14 77 48"><span class='xocr_word' id='xword_1_1' title="x_wconf -3">The</span></span> <span class='ocr_word' id='word_1_2' title="bbox 92 14 202 59"><span class='xocr_word' id='xword_1_2' title="x_wconf -3">quick</span></span> <span class='ocr_word' id='word_1_3' title="bbox 214 14 341 48"><span class='xocr_word' id='xword_1_3' title="x_wconf -3">brown</span></span> <span class='ocr_word' id='word_1_4' title="bbox 355 14 420 48"><span class='xocr_word' id='xword_1_4' title="x_wconf -4">fox</span></span></span>
+</p>
+</div>
+</div>
+</body>
+</html>
+EOS
+
+$slist->import_files(
+    paths             => [ 'test.pnm', 'test.pnm' ],
+    finished_callback => sub {
+        $slist->{data}[0][2]{hocr} = $hocr;
+        $slist->{data}[1][2]{hocr} = $hocr;
+        $slist->save_hocr(
+            path              => 'test.txt',
+            list_of_pages     => [ $slist->{data}[0][2], $slist->{data}[1][2] ],
+            finished_callback => sub { Gtk2->main_quit }
+        );
+    }
+);
+Gtk2->main;
+
+my $expected = <<'EOS';
+                  '<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title></title>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+<meta name='ocr-system' content='tesseract'>
+</head>
+<body>
+<div class='ocr_page' id='page_1' title='image "test.tif"; bbox 0 0 422 61'>
+<div class='ocr_carea' id='block_1_1' title="bbox 1 14 420 59">
+<p class='ocr_par'>
+<span class='ocr_line' id='line_1_1' title="bbox 1 14 420 59"><span class='ocr_word' id='word_1_1' title="bbox 1 14 77 48"><span class='xocr_word' id='xword_1_1' title="x_wconf -3">The</span></span> <span class='ocr_word' id='word_1_2' title="bbox 92 14 202 59"><span class='xocr_word' id='xword_1_2' title="x_wconf -3">quick</span></span> <span class='ocr_word' id='word_1_3' title="bbox 214 14 341 48"><span class='xocr_word' id='xword_1_3' title="x_wconf -3">brown</span></span> <span class='ocr_word' id='word_1_4' title="bbox 355 14 420 48"><span class='xocr_word' id='xword_1_4' title="x_wconf -4">fox</span></span></span>
+</p>
+</div>
+</div>
+
+<div class='ocr_page' id='page_1' title='image "test.tif"; bbox 0 0 422 61'>
+<div class='ocr_carea' id='block_1_1' title="bbox 1 14 420 59">
+<p class='ocr_par'>
+<span class='ocr_line' id='line_1_1' title="bbox 1 14 420 59"><span class='ocr_word' id='word_1_1' title="bbox 1 14 77 48"><span class='xocr_word' id='xword_1_1' title="x_wconf -3">The</span></span> <span class='ocr_word' id='word_1_2' title="bbox 92 14 202 59"><span class='xocr_word' id='xword_1_2' title="x_wconf -3">quick</span></span> <span class='ocr_word' id='word_1_3' title="bbox 214 14 341 48"><span class='xocr_word' id='xword_1_3' title="x_wconf -3">brown</span></span> <span class='ocr_word' id='word_1_4' title="bbox 355 14 420 48"><span class='xocr_word' id='xword_1_4' title="x_wconf -4">fox</span></span></span>
+</p>
+</div>
+</div>
+</body>
+</html>
+EOS
+
+is( `cat test.txt`, $expected, 'saved multipage hOCR' );
+
+#########################
+
+unlink 'test.pnm', 'test.txt';
+Gscan2pdf::Document->quit();
