@@ -2,6 +2,7 @@
 
 * + libimage-sane-perl frontend
   - scanimage-perl and scanadf-perl frontends
+* Fixed bug writing multipage hOCR files.
 
 
 1.8.2 (01.06.2017):
